操作指南新增辅助预警指标
- 新增伦敦租借利率、短期涨幅、金银比等辅助指标
- 新增风险等级判定表（警示→高危→极高危→必跌）
- 新增2026年1月30日复盘案例

--- a/01-操作指南-2026年交割日历.md
+++ b/01-操作指南-2026年交割日历.md
@@ -174,12 +174,46 @@
 
 ---
 
-## 五、信号铁律（出现2个立刻减仓）
+## 五、核心预警指标（出现2个立刻减仓）
 
-- [ ] 白银注册库存 < 1.2亿盎司 ✅ **当前已触发**
-- [ ] 白银近月合约价格 > 远月合约（逆价差）
-- [ ] COMEX白银周度注册库存环比下降 > 5%
-- [ ] 白银交割申请量突破历史同期均值
+### 核心指标（必看）⭐⭐⭐⭐⭐
+
+| 指标 | 警戒线 | 当前状态 |
+|------|--------|----------|
+| COMEX白银注册库存 | < 1.5亿盎司 | ✅ **1.12亿（已触发）** |
+| 交割窗口 | 第一通知日前3天~最后交易日 | 按日历查看 |
+| 白银近月 > 远月（逆价差） | 出现即危险 | 需实时查看 |
+| 库存周环比下降 | > 5% | 每周三查看 |
+
+### 辅助指标（参考）⭐⭐⭐
+
+| 指标 | 警戒线 | 说明 |
+|------|--------|------|
+| **伦敦白银租借利率** | > 10% | 正常5%，2025年10月达39% |
+| **短期涨幅** | > 50%/月 | 2026年1月27天涨64%后暴跌 |
+| **金银比** | < 70 或 > 100 | 正常80-90，极端值预警 |
+| **宏观利空** | 美联储政策等 | 叠加时跌幅放大20-50% |
+| **流动性风险** | 假期/宕机 | 叠加交割期风险放大3-5倍 |
+
+### 风险等级判定
+
+| 触发情况 | 风险等级 | 操作建议 |
+|----------|----------|----------|
+| 1个核心指标 | ⚠️ 警示 | 关注，准备减仓 |
+| 2个核心指标 | 🔴 高危 | **减仓50%** |
+| 2核心+2辅助 | 🔴🔴 极高危 | **减仓80%** |
+| 全部触发 | 💀 必跌 | **清仓观望** |
+
+### 2026年1月30日复盘
+
+| 指标 | 当时状态 | 触发？ |
+|------|----------|--------|
+| 库存 < 1.5亿 | 1.12亿 | ✅ |
+| 交割窗口 | 第一通知日 | ✅ |
+| 短期涨幅 | 27天+64% | ✅ |
+| 金银比 | ~46（极低） | ✅ |
+| 宏观利空 | 沃什提名 | ✅ |
+| **结果** | 2核心+3辅助 | **白银-17.8%** |
 
 ---
 
