操作指南新增2026年FOMC会议时间表
- 8次FOMC会议完整时间
- 标注与交割窗口重叠的高危月份（3/6/12月）
- FOMC对金银影响说明
- 操作建议（会议前后如何应对）

--- a/01-操作指南-2026年交割日历.md
+++ b/01-操作指南-2026年交割日历.md
@@ -228,17 +228,58 @@
 
 ---
 
-## 七、实时数据查询来源
+## 七、2026年美联储议息会议（FOMC）
+
+### 会议时间表
+
+| 会议日期 | 决议公布 | 与交割窗口重叠？ | 风险提示 |
+|----------|----------|------------------|----------|
+| 1月27-28日 | 1月28日 | ✅ 2月交割窗口 | ⚠️ **已发生暴跌** |
+| **3月17-18日** | 3月18日 | ✅ **3月交割窗口** | 🔴 **双重高危** |
+| 4月28-29日 | 4月29日 | ⚠️ 4月交割末期 | 中等风险 |
+| **6月16-17日** | 6月17日 | ✅ **6月交割窗口** | 🔴 **双重高危** |
+| 7月28-29日 | 7月29日 | ✅ 7月交割末期 | 中等风险 |
+| 9月15-16日 | 9月16日 | ⚠️ 9月交割中期 | 中等风险 |
+| 10月27-28日 | 10月28日 | ✅ 10月交割末期 | 中等风险 |
+| **12月8-9日** | 12月9日 | ✅ **12月交割窗口** | 🔴 **双重高危** |
+
+### 双重高危月份（交割+FOMC）
+
+| 月份 | 交割风险 | FOMC日期 | 叠加风险 |
+|------|----------|----------|----------|
+| **3月** | ★★★★★ | 3月18日 | 💀 **极高危** |
+| **6月** | ★★★★★ | 6月17日 | 💀 **极高危** |
+| **12月** | ★★★★★ | 12月9日 | 💀 **极高危** |
+
+### FOMC对金银的影响
+
+| 情况 | 金银反应 | 操作建议 |
+|------|----------|----------|
+| 鹰派（加息/缩表） | 📉 下跌 | 提前减仓 |
+| 鸽派（降息/宽松） | 📈 上涨 | 可持有 |
+| 态度不明/市场意外 | 📉📈 大幅波动 | 轻仓观望 |
+
+### 操作建议
+
+1. **FOMC会议前2天**：减仓20-30%，避免意外
+2. **会议当天**：不操作，等决议公布
+3. **决议公布后**：观察1-2天再决定是否加仓
+4. **交割+FOMC双重叠加**：减仓50%以上
+
+---
+
+## 八、实时数据查询来源
 
 | 数据 | 查询网站 |
 |------|----------|
 | COMEX白银库存 | silverdata.io |
 | 金银实时价格 | kitco.com |
 | 期货合约报价 | cmegroup.com |
+| FOMC会议日程 | federalreserve.gov |
 
 ---
 
-## 八、一句话总结
+## 九、一句话总结
 
 > **白银交割期 + 库存紧张 = 纸黄金必跌**
 > 
