操作指南新增重要经济数据日历（已验证）
新增内容：
- 非农就业数据（NFP）12个月完整日期
- CPI通胀数据11个月发布日期
- 三巫日（期权到期）4个季度日期
- 美股休市日（NYSE）10个假期
- 超级危险日汇总（多重事件叠加）

数据来源：
- FOMC: federalreserve.gov（已验证正确）
- 非农: bls.gov
- CPI: bls.gov
- 三巫日: cboe.com
- 休市日: nyse.com

--- a/01-操作指南-2026年交割日历.md
+++ b/01-操作指南-2026年交割日历.md
@@ -268,7 +268,133 @@
 
 ---
 
-## 八、实时数据查询来源
+## 八、2026年非农就业数据（NFP）
+
+> 每月第一个周五，美东时间8:30 AM公布，对金银影响极大
+
+| 月份 | 公布日期 | 与交割/FOMC叠加？ | 风险提示 |
+|------|----------|-------------------|----------|
+| 1月 | 1月9日 | - | 正常关注 |
+| 2月 | 2月6日 | ⚠️ 2月交割期 | 注意波动 |
+| **3月** | **3月6日** | ✅ **3月交割期** | 🔴 **高危** |
+| 4月 | 4月3日 | ⚠️ 4月交割期 | 注意波动 |
+| 5月 | 5月8日 | - | 正常关注 |
+| **6月** | **6月5日** | ✅ **6月交割期** | 🔴 **高危** |
+| 7月 | 7月2日 | ⚠️ 7月交割期 | 注意波动 |
+| 8月 | 8月7日 | ⚠️ 8月交割期 | 注意波动 |
+| 9月 | 9月4日 | ⚠️ 9月交割期 | 注意波动 |
+| 10月 | 10月2日 | - | 正常关注 |
+| 11月 | 11月6日 | - | 正常关注 |
+| **12月** | **12月4日** | ✅ **12月交割期** | 🔴 **高危** |
+
+### 非农对金银的影响
+
+| 数据表现 | 金银反应 | 操作建议 |
+|----------|----------|----------|
+| 就业强劲（高于预期） | 📉 下跌（美元走强） | 减仓观望 |
+| 就业疲软（低于预期） | 📈 上涨（降息预期） | 可持有 |
+| 符合预期 | 小幅波动 | 正常操作 |
+
+---
+
+## 九、2026年CPI通胀数据
+
+> 每月中旬公布，美东时间8:30 AM，对美联储政策预期影响极大
+
+| 数据月份 | 公布日期 | 与交割/FOMC叠加？ | 风险提示 |
+|----------|----------|-------------------|----------|
+| 1月数据 | 2月11日 | ⚠️ 2月交割期 | 注意波动 |
+| 2月数据 | 3月11日 | ✅ **3月交割期** | 🔴 **高危** |
+| 3月数据 | 4月10日 | ⚠️ 4月交割期 | 注意波动 |
+| 4月数据 | 5月12日 | - | 正常关注 |
+| 5月数据 | 6月10日 | ✅ **6月交割期** | 🔴 **高危** |
+| 6月数据 | 7月14日 | ⚠️ 7月交割期 | 注意波动 |
+| 7月数据 | 8月12日 | ⚠️ 8月交割期 | 注意波动 |
+| 8月数据 | 9月11日 | ⚠️ 9月交割中期 | 注意波动 |
+| 9月数据 | 10月14日 | ⚠️ 10月交割期 | 注意波动 |
+| 10月数据 | 11月10日 | - | 正常关注 |
+| 11月数据 | 12月10日 | ✅ **12月交割期+FOMC后1天** | 🔴 **高危** |
+
+### CPI对金银的影响
+
+| 数据表现 | 金银反应 | 操作建议 |
+|----------|----------|----------|
+| 通胀高于预期 | 📉 下跌（加息预期） | 减仓观望 |
+| 通胀低于预期 | 📈 上涨（降息预期） | 可持有 |
+| 通胀符合预期 | 小幅波动 | 正常操作 |
+
+---
+
+## 十、2026年三巫日（期权到期）
+
+> 每季度第三个周五，股指期货+股指期权+个股期权同时到期，波动极大
+
+| 季度 | 三巫日 | 与交割/FOMC叠加？ | 风险提示 |
+|------|--------|-------------------|----------|
+| Q1 | **3月20日** | ✅ **3月交割期+FOMC后2天** | 💀 **极高危** |
+| Q2 | **6月19日** | ✅ **6月交割期+FOMC后2天** | 💀 **极高危** |
+| Q3 | 9月18日 | ⚠️ 9月交割中期+FOMC后2天 | 🔴 **高危** |
+| Q4 | **12月18日** | ✅ **12月交割期+FOMC后9天** | 🔴 **高危** |
+
+### 三巫日特点
+
+- 交易量激增（平时的2-3倍）
+- 最后1小时波动最剧烈（"巫师时刻"）
+- 金银价格可能出现异常波动
+
+### 操作建议
+
+1. **三巫日前1天**：减仓20%
+2. **三巫日当天**：不操作，观望
+3. **三巫日后**：等1-2天再考虑加仓
+
+---
+
+## 十一、2026年美股休市日
+
+> 休市=流动性下降=波动风险放大，尤其叠加交割期时
+
+| 日期 | 假期 | 与交割窗口叠加？ | 风险提示 |
+|------|------|------------------|----------|
+| 1月1日（周四） | 元旦 | ⚠️ 2月交割前期 | 流动性风险 |
+| 1月19日（周一） | 马丁路德金日 | ⚠️ 2月交割窗口 | 流动性风险 |
+| 2月16日（周一） | 总统日 | ✅ **3月交割窗口** | 🔴 **注意** |
+| 4月3日（周五） | 耶稣受难日 | ⚠️ 4月交割末期 | 流动性风险 |
+| 5月25日（周一） | 阵亡将士纪念日 | ✅ **6月交割窗口** | 🔴 **注意** |
+| **6月19日（周五）** | **六月节** | ✅ **6月交割期+三巫日** | 💀 **极高危** |
+| 7月3日（周五） | 独立日（观察日） | ⚠️ 7月交割期 | 流动性风险 |
+| 9月7日（周一） | 劳动节 | ⚠️ 9月交割期 | 流动性风险 |
+| 11月26日（周四） | 感恩节 | ⚠️ 12月交割前期 | 流动性风险 |
+| 12月25日（周五） | 圣诞节 | ✅ **12月交割期** | 🔴 **注意** |
+
+### 早盘收市日（13:00 ET）
+
+| 日期 | 假期前一天 | 说明 |
+|------|------------|------|
+| 11月27日（周五） | 感恩节后一天 | 流动性极低 |
+| 12月24日（周四） | 平安夜 | 流动性极低 |
+
+---
+
+## 十二、2026年超级危险日（多重叠加）
+
+> 当交割、FOMC、非农/CPI、三巫日、假期多重叠加时，风险成倍放大
+
+| 日期范围 | 叠加事件 | 风险等级 | 操作建议 |
+|----------|----------|----------|----------|
+| **3月6日** | 3月交割+非农 | 🔴🔴 | 减仓50%+ |
+| **3月11日** | 3月交割+CPI | 🔴🔴 | 减仓50%+ |
+| **3月17-20日** | 3月交割+FOMC+三巫日 | 💀💀💀 | **减仓80%** |
+| **6月5日** | 6月交割+非农 | 🔴🔴 | 减仓50%+ |
+| **6月10日** | 6月交割+CPI | 🔴🔴 | 减仓50%+ |
+| **6月16-19日** | 6月交割+FOMC+三巫日+假期 | 💀💀💀 | **减仓80%** |
+| **12月4日** | 12月交割+非农 | 🔴🔴 | 减仓50%+ |
+| **12月8-10日** | 12月交割+FOMC+CPI | 💀💀💀 | **减仓80%** |
+| **12月18日** | 12月交割+三巫日 | 🔴🔴 | 减仓50%+ |
+
+---
+
+## 十三、实时数据查询来源
 
 | 数据 | 查询网站 |
 |------|----------|
@@ -276,10 +402,12 @@
 | 金银实时价格 | kitco.com |
 | 期货合约报价 | cmegroup.com |
 | FOMC会议日程 | federalreserve.gov |
+| 非农/CPI数据 | bls.gov |
+| 美股休市日历 | nyse.com |
 
 ---
 
-## 九、一句话总结
+## 十四、一句话总结
 
 > **白银交割期 + 库存紧张 = 纸黄金必跌**
 > 
