新增CME FedWatch利率预测工具
- 操作指南新增利率预测网站
- 新手指南新增FedWatch查看教程
- 手机书签新增利率预测链接

--- a/00-新手必看-数据查询指南.md
+++ b/00-新手必看-数据查询指南.md
@@ -73,7 +73,30 @@
 
 ## 三、辅助数据（进阶）
 
-### 4. 伦敦白银租借利率
+### 4. 美联储利率预测（重要！）
+
+**网站**：https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html
+
+**怎么看**：
+1. 打开网站，顶部有多个标签（每个FOMC会议日期）
+2. 点击想看的会议日期
+3. 看 **Target Rate Probabilities**（目标利率概率）
+
+**判断标准**：
+| 市场预期 | 金银影响 | 你该怎么做 |
+|----------|----------|------------|
+| 降息概率 > 70% | 📈 利好 | 可以持有 |
+| 加息概率 > 50% | 📉 利空 | 考虑减仓 |
+| 预期大幅变化 | ⚠️ 波动 | 轻仓观望 |
+
+**关键单词**：
+- Rate Cut = 降息（利好金银）
+- Rate Hike = 加息（利空金银）
+- Hold/Unchanged = 维持不变
+
+---
+
+### 5. 伦敦白银租借利率
 
 **网站**：https://www.lbma.org.uk/prices-and-data/forward-rates
 
@@ -85,7 +108,7 @@
 
 ---
 
-### 5. 金银比
+### 6. 金银比
 
 **网站**：https://www.kitco.com/charts/gold-silver-ratio.html
 
@@ -96,7 +119,7 @@
 
 ---
 
-### 6. 纸黄金价格（国内银行）
+### 7. 纸黄金价格（国内银行）
 
 **各银行查询**：
 | 银行 | 查询方式 |
@@ -138,6 +161,7 @@
 1. COMEX库存：silverdata.io
 2. 金银价格：kitco.com
 3. 金银比：kitco.com/charts/gold-silver-ratio.html
+4. 利率预测：cmegroup.com/fedwatch
 ```
 
 ---
