--- a/01-操作指南-2026年交割日历.md
+++ b/01-操作指南-2026年交割日历.md
@@ -396,14 +396,15 @@
 
 ## 十三、实时数据查询来源
 
-| 数据 | 查询网站 |
-|------|----------|
-| COMEX白银库存 | silverdata.io |
-| 金银实时价格 | kitco.com |
-| 期货合约报价 | cmegroup.com |
-| FOMC会议日程 | federalreserve.gov |
-| 非农/CPI数据 | bls.gov |
-| 美股休市日历 | nyse.com |
+| 数据 | 查询网站 | 说明 |
+|------|----------|------|
+| COMEX白银库存 | silverdata.io | 每日更新 |
+| 金银实时价格 | kitco.com | 实时报价 |
+| 期货合约报价 | cmegroup.com | 交割数据 |
+| **利率预测** | **cmegroup.com/fedwatch** | **必看！加息/降息概率** |
+| FOMC会议日程 | federalreserve.gov | 官方日程 |
+| 非农/CPI数据 | bls.gov | 官方数据 |
+| 美股休市日历 | nyse.com | 假期安排 |
 
 ---
 
