新手指南大幅扩充
新增内容：
- 期货逆价差（Backwardation）查询教程
- 美元指数（DXY）查询和解读
- 手机App推荐（Gold Live!等）
- 数据更新时间表（库存/非农/CPI/FOMC）
- 交易时段说明（北京时间）
- 紧急暴跌处理流程（3步判断法）
- FOMC会议前检查清单
- 新增5个常见问题解答
- 手机书签扩充至6个网站

--- a/00-新手必看-数据查询指南.md
+++ b/00-新手必看-数据查询指南.md
@@ -119,7 +119,50 @@
 
 ---
 
-### 7. 纸黄金价格（国内银行）
+### 7. 期货逆价差（Backwardation）⚠️重要
+
+**网站**：https://futures.tradingcharts.com/futures/quotes/SI.html
+
+**怎么看**：
+1. 打开网站，看白银各月合约价格
+2. 对比**近月合约**和**远月合约**的价格
+
+**判断标准**：
+| 情况 | 市场状态 | 风险等级 |
+|------|----------|----------|
+| 远月 > 近月 | 正价差（Contango） | ✅ 正常 |
+| **近月 > 远月** | **逆价差（Backwardation）** | 🔴 **危险信号！** |
+
+**关键单词**：
+- Contango = 正价差（正常）
+- Backwardation = 逆价差（危险，供应紧张）
+
+**出现逆价差意味着**：实物白银紧缺，市场愿意付更高价格获得现货，交割危机可能爆发。
+
+---
+
+### 8. 美元指数（DXY）
+
+**网站**（任选）：
+| 网站 | 链接 | 特点 |
+|------|------|------|
+| **Investing.com** | https://www.investing.com/indices/usdollar | 中文可选 |
+| TradingView | https://www.tradingview.com/symbols/TVC-DXY/ | 图表专业 |
+
+**怎么看**：
+- 美元指数上涨 → 金银通常下跌
+- 美元指数下跌 → 金银通常上涨
+
+**判断标准**：
+| DXY水平 | 对金银影响 |
+|---------|------------|
+| > 105 | 📉 压制金银 |
+| 100-105 | 中性 |
+| < 100 | 📈 利好金银 |
+
+---
+
+### 9. 纸黄金价格（国内银行）
 
 **各银行查询**：
 | 银行 | 查询方式 |
@@ -131,7 +174,55 @@
 
 ---
 
-## 四、每周查询清单（5分钟搞定）
+## 四、手机App推荐
+
+### 金银价格追踪App
+
+| App名称 | 平台 | 评分 | 特点 |
+|---------|------|------|------|
+| **Gold Live!**（推荐） | iOS / Android | 4.8⭐ | Kitco官方，最全面 |
+| **Goldo** | Android | 4.8⭐ | 界面简洁，有计算器 |
+| **金十数据** | iOS / Android | - | 中文，财经日历全 |
+| **华尔街见闻** | iOS / Android | - | 中文，新闻快 |
+
+### App下载链接
+
+```
+Gold Live!（iOS）: App Store搜索 "Gold Live Kitco"
+Gold Live!（Android）: Google Play搜索 "Gold Live Kitco"
+金十数据: 各应用商店搜索 "金十数据"
+```
+
+### App设置建议
+
+1. 开启**价格提醒**：白银跌5%时通知
+2. 添加**Widget小组件**：桌面实时显示金银价格
+3. 关注**新闻推送**：重大事件第一时间知道
+
+---
+
+## 五、数据更新时间表
+
+> 知道什么时候数据更新，才能第一时间获取信息
+
+| 数据 | 更新时间 | 说明 |
+|------|----------|------|
+| COMEX库存 | 每周三 16:00 ET | 约北京时间周四凌晨4-5点 |
+| 金银价格 | 实时 | 交易时段持续更新 |
+| 非农数据 | 每月第一个周五 8:30 ET | 约北京时间当晚20:30（夏令时）或21:30（冬令时） |
+| CPI数据 | 每月中旬 8:30 ET | 同上 |
+| FOMC决议 | 会议日 14:00 ET | 约北京时间凌晨2-3点 |
+
+### 交易时段（北京时间）
+
+| 市场 | 夏令时 | 冬令时 |
+|------|--------|--------|
+| COMEX金银 | 06:00-次日05:00 | 07:00-次日06:00 |
+| 纸黄金（工行） | 周一07:00-周六04:00 | 周一08:00-周六05:00 |
+
+---
+
+## 六、每周查询清单（5分钟搞定）
 
 ### 周三必查（COMEX库存更新日）
 
@@ -151,9 +242,65 @@
 | 2 | 确认第一通知日是哪天 |
 | 3 | 提前10天开始减仓 |
 
+### FOMC会议前必查
+
+| 步骤 | 操作 |
+|------|------|
+| 1 | 打开 FedWatch 看利率预期 |
+| 2 | 如果市场预期大幅变化，提前减仓 |
+| 3 | 会议当天不操作 |
+
 ---
 
-## 五、手机书签设置（一键查看）
+## 七、紧急暴跌处理流程
+
+> 突然暴跌时，按这个流程操作，不要慌
+
+### 第一步：判断暴跌类型（2分钟）
+
+| 检查项 | 怎么查 | 结果 |
+|--------|--------|------|
+| 是否在交割窗口？ | 看01-操作指南日历 | 是/否 |
+| 白银库存是否紧张？ | silverdata.io < 1.5亿？ | 是/否 |
+| 是否出现逆价差？ | tradingcharts.com | 是/否 |
+| 是否有宏观利空？ | 新闻（FOMC/非农等） | 是/否 |
+
+### 第二步：决定行动
+
+| 判断结果 | 暴跌类型 | 操作建议 |
+|----------|----------|----------|
+| 2个以上"是" | 🔴 **交割型暴跌** | **立即减仓50-80%** |
+| 1个"是" | ⚠️ 可能是交割跌 | 减仓30%，观察 |
+| 全部"否" | 📉 普通市场波动 | 可以观望或小仓抄底 |
+
+### 第三步：执行
+
+```
+交割型暴跌 → 打开银行App → 卖出 → 等交割期结束再考虑买回
+普通波动 → 观望 → 看支撑位 → 小仓试探
+```
+
+### 暴跌时的禁忌
+
+| ❌ 不要做 | ✅ 应该做 |
+|-----------|-----------|
+| 不要抄底 | 先判断暴跌类型 |
+| 不要加仓 | 交割跌就减仓 |
+| 不要死扛 | 设好止损线 |
+| 不要情绪化 | 按流程操作 |
+
+### 历史案例：2026年1月30日
+
+| 时间 | 发生了什么 | 正确操作 |
+|------|------------|----------|
+| 1月27日 | 白银涨幅已达64% | 应该减仓 |
+| 1月28日 | FOMC决议+交割窗口 | 应该清仓 |
+| 1月30日 | 白银暴跌17.8% | 如果没跑，止损出场 |
+| 2月后 | 等待企稳 | 观望，不急着抄底 |
+
+---
+
+## 八、手机书签设置（一键查看）
 
 把这些网址存到手机浏览器书签：
 
@@ -162,11 +309,13 @@
 2. 金银价格：kitco.com
 3. 金银比：kitco.com/charts/gold-silver-ratio.html
 4. 利率预测：cmegroup.com/fedwatch
+5. 逆价差：futures.tradingcharts.com/futures/quotes/SI.html
+6. 美元指数：investing.com/indices/usdollar
 ```
 
 ---
 
-## 六、简化版：只看这一个
+## 九、简化版：只看这一个
 
 如果你觉得太复杂，**只看这一个就够了**：
 
@@ -181,7 +330,7 @@
 
 ---
 
-## 七、常见问题
+## 十、常见问题
 
 ### Q: 这些网站是英文的，看不懂怎么办？
 
@@ -204,9 +353,29 @@
 
 **A**: 直接看01-操作指南的日历，按日期执行减仓就行，不用深究原理。
 
+### Q: 什么是逆价差（Backwardation）？
+
+**A**: 简单说就是"现货比期货贵"。正常情况远期合约应该比近期贵（因为有存储成本），但如果反过来，说明市场急着要现货，供应紧张，是危险信号。
+
+### Q: 美元指数怎么影响金银？
+
+**A**: 金银用美元计价，所以：
+- 美元涨 → 金银相对变贵 → 买的人少 → 金银跌
+- 美元跌 → 金银相对变便宜 → 买的人多 → 金银涨
+
+### Q: 暴跌时要不要抄底？
+
+**A**: **先判断是什么跌**：
+- 交割型暴跌：不要抄底，等交割期结束
+- 普通回调：可以小仓试探
+
+### Q: 用哪个App最好？
+
+**A**: 推荐 **Gold Live!**（Kitco官方），免费、全面、实时。
+
 ---
 
-## 八、一句话总结
+## 十一、一句话总结
 
 > **每周三查 silverdata.io，库存 < 1.5亿就减仓，就这么简单。**
 
