理论框架重大升级：分层优先级体系
核心变化：
- P0级（必要条件）：库存+交割窗口
- P1级（放大器）：逆价差、短期涨幅、CFTC投机多头
- P2级（催化剂）：FOMC/非农/CPI/三巫日/假期
- P3级（辅助验证）：ETF持仓、租借利率、金银比、美元指数

新增内容：
- CFTC持仓报告查询教程
- ETF持仓（GLD/SLV）查询教程
- 完整决策流程图
- 理论局限性说明（地缘危机、央行干预等）
- 数据查询来源按优先级整理

优先级逻辑：
- P0是门槛，不满足就安心
- P1决定跌多少
- P2决定什么时候跌
- P3确认判断是否正确

--- a/00-新手必看-数据查询指南.md
+++ b/00-新手必看-数据查询指南.md
@@ -162,7 +162,56 @@
 
 ---
 
-### 9. 纸黄金价格（国内银行）
+### 9. CFTC持仓报告（P1级指标）
+
+**网站**：https://www.cftc.gov/MarketReports/CommitmentsofTraders/index.htm
+
+**怎么看**：
+1. 打开网站，找到 "Short Format" 报告
+2. 搜索 "SILVER" 或 "GOLD"
+3. 看 "Non-Commercial"（投机者）的 "Long"（多头）数量
+
+**判断标准**：
+| 投机多头仓位 | 风险等级 | 说明 |
+|--------------|----------|------|
+| 正常范围 | ✅ 安全 | 继续持有 |
+| 历史高位 | 🔴 危险 | 获利盘多，容易踩踏 |
+| 大幅减少 | ⚠️ 注意 | 资金在撤退 |
+
+**关键单词**：
+- Non-Commercial = 投机者（对冲基金等）
+- Commercial = 商业用户（矿企、珠宝商等）
+- Long = 多头（看涨）
+- Short = 空头（看跌）
+
+**更新时间**：每周五公布（显示的是周二的数据）
+
+---
+
+### 10. ETF持仓（P3级指标）
+
+**黄金ETF（GLD）**：https://www.spdrgoldshares.com
+
+**白银ETF（SLV）**：https://www.ishares.com/us/products/239855/ishares-silver-trust
+
+**怎么看**：
+1. 找到 "Holdings"（持仓）或 "Total Ounces"（总盎司数）
+2. 对比昨天/上周的数据
+
+**判断标准**：
+| ETF持仓变化 | 含义 | 风险等级 |
+|-------------|------|----------|
+| 连续增加 | 大资金流入 | 📈 看多 |
+| 稳定不变 | 观望 | 中性 |
+| **连续减少** | **大资金撤退** | 🔴 **看空** |
+
+**简化查看**：也可以在 kitco.com 首页看到 GLD/SLV 持仓变化
+| 100-105 | 中性 |
+| < 100 | 📈 利好金银 |
+
+---
+
+### 11. 纸黄金价格（国内银行）
 
 **各银行查询**：
 | 银行 | 查询方式 |
@@ -305,12 +354,21 @@ Gold Live!（Android）: Google Play搜索 "Gold Live Kitco"
 把这些网址存到手机浏览器书签：
 
 ```
+【P0级-必看】
 1. COMEX库存：silverdata.io
-2. 金银价格：kitco.com
-3. 金银比：kitco.com/charts/gold-silver-ratio.html
-4. 利率预测：cmegroup.com/fedwatch
-5. 逆价差：futures.tradingcharts.com/futures/quotes/SI.html
-6. 美元指数：investing.com/indices/usdollar
+2. 交割日历：01-操作指南
+
+【P1级-放大器】
+3. 逆价差：futures.tradingcharts.com/futures/quotes/SI.html
+4. CFTC持仓：cftc.gov/cot
+
+【P2级-催化剂】
+5. 利率预测：cmegroup.com/fedwatch
+
+【P3级-确认】
+6. 金银价格：kitco.com
+7. 金银比：kitco.com/charts/gold-silver-ratio.html
+8. 美元指数：investing.com/indices/usdollar
 ```
 
 ---
