--- a/01-操作指南-2026年交割日历.md
+++ b/01-操作指南-2026年交割日历.md
@@ -174,46 +174,101 @@
 
 ---
 
-## 五、核心预警指标（出现2个立刻减仓）
+## 五、分层预警指标体系
 
-### 核心指标（必看）⭐⭐⭐⭐⭐
+> **核心逻辑**：P0是门槛 → P1定幅度 → P2定时点 → P3确认
 
-| 指标 | 警戒线 | 当前状态 |
-|------|--------|----------|
-| COMEX白银注册库存 | < 1.5亿盎司 | ✅ **1.12亿（已触发）** |
-| 交割窗口 | 第一通知日前3天~最后交易日 | 按日历查看 |
-| 白银近月 > 远月（逆价差） | 出现即危险 | 需实时查看 |
-| 库存周环比下降 | > 5% | 每周三查看 |
+---
 
-### 辅助指标（参考）⭐⭐⭐
+### 🔴 P0级：必要条件（两个都满足才危险）
 
-| 指标 | 警戒线 | 说明 |
-|------|--------|------|
-| **伦敦白银租借利率** | > 10% | 正常5%，2025年10月达39% |
-| **短期涨幅** | > 50%/月 | 2026年1月27天涨64%后暴跌 |
-| **金银比** | < 70 或 > 100 | 正常80-90，极端值预警 |
-| **宏观利空** | 美联储政策等 | 叠加时跌幅放大20-50% |
-| **流动性风险** | 假期/宕机 | 叠加交割期风险放大3-5倍 |
+| 指标 | 警戒线 | 当前状态 | 查询 |
+|------|--------|----------|------|
+| **COMEX白银库存** | < 1.5亿盎司 | ✅ **1.12亿（已触发）** | silverdata.io |
+| **交割窗口** | 第一通知日前3天~最后交易日 | 按下方日历 | 本文档 |
 
-### 风险等级判定
+**P0判断**：
+- ❌ 两个都不满足 → 安心持有
+- ⚠️ 满足1个 → 关注
+- 🔴 **两个都满足 → 进入高危，往下看P1**
+
+---
+
+### 🟠 P1级：放大器（决定跌多少）
+
+| 指标 | 警戒线 | 触发后影响 | 查询 |
+|------|--------|------------|------|
+| **逆价差** | 近月 > 远月 | 跌幅 +50% | tradingcharts.com |
+| **短期涨幅** | > 50%/月 | 跌幅 +30-50% | kitco.com |
+| **CFTC投机多头** | 净多头历史高位 | 跌幅 +20-30% | cftc.gov |
+
+**P1预期跌幅**：
+| P0+P1触发 | 白银预期跌幅 | 黄金预期跌幅 | 操作 |
+|-----------|--------------|--------------|------|
+| P0仅 | 5-10% | 2-5% | 减仓30% |
+| P0+1个P1 | 10-15% | 4-7% | 减仓50% |
+| P0+2个P1 | 15-20% | 6-10% | 减仓70% |
+| P0+3个P1 | **20%+** | **8%+** | **减仓80%+** |
+
+---
+
+### 🟡 P2级：催化剂（决定什么时候跌）
+
+| 指标 | 2026年关键日期 | 说明 |
+|------|----------------|------|
+| **FOMC决议** | 3/18、6/17、12/9 | 见第七章 |
+| **非农数据** | 每月第一周五 | 见第八章 |
+| **CPI数据** | 每月中旬 | 见第九章 |
+| **三巫日** | 3/20、6/19、9/18、12/18 | 见第十章 |
+| **假期** | 见第十一章 | 流动性风险 |
+
+**P2的作用**：P0+P1已触发时，P2是"点火器"
+
+---
+
+### 🟢 P3级：辅助验证（确认信号）
+
+| 指标 | 警戒线 | 说明 | 查询 |
+|------|--------|------|------|
+| **ETF持仓** | GLD/SLV连续流出 | 大资金撤退 | spdrgoldshares.com |
+| **租借利率** | > 10% | 实物紧张 | lbma.org.uk |
+| **金银比** | < 70 或 > 100 | 极端估值 | kitco.com |
+| **美元指数** | > 105 | 压制金银 | investing.com |
+
+**P3的作用**：触发越多 = 判断越可信
+
+---
+
+### 风险等级速查表
 
 | 触发情况 | 风险等级 | 操作建议 |
 |----------|----------|----------|
-| 1个核心指标 | ⚠️ 警示 | 关注，准备减仓 |
-| 2个核心指标 | 🔴 高危 | **减仓50%** |
-| 2核心+2辅助 | 🔴🔴 极高危 | **减仓80%** |
-| 全部触发 | 💀 必跌 | **清仓观望** |
+| P0都不触发 | ✅ 安全 | 正常持有 |
+| P0触发1个 | ⚠️ 警示 | 关注，准备减仓 |
+| **P0都触发** | 🔴 高危 | **减仓30-50%** |
+| **P0 + P1≥2** | 🔴🔴 极高危 | **减仓50-80%** |
+| **P0 + P1 + P2叠加** | 💀 必跌 | **清仓观望** |
 
-### 2026年1月30日复盘
+---
 
-| 指标 | 当时状态 | 触发？ |
-|------|----------|--------|
-| 库存 < 1.5亿 | 1.12亿 | ✅ |
-| 交割窗口 | 第一通知日 | ✅ |
-| 短期涨幅 | 27天+64% | ✅ |
-| 金银比 | ~46（极低） | ✅ |
-| 宏观利空 | 沃什提名 | ✅ |
-| **结果** | 2核心+3辅助 | **白银-17.8%** |
+### 2026年1月30日复盘（用新框架）
+
+| 层级 | 指标 | 状态 | 触发？ |
+|------|------|------|--------|
+| P0 | 库存 < 1.5亿 | 1.12亿 | ✅ |
+| P0 | 交割窗口 | 第一通知日 | ✅ |
+| P1 | 逆价差 | 出现 | ✅ |
+| P1 | 短期涨幅 | 64%/27天 | ✅ |
+| P1 | CFTC多头 | 历史高位 | ✅ |
+| P2 | FOMC | 1月28日 | ✅ |
+| P3 | 金银比 | ~46 | ✅ |
+| P3 | 宏观利空 | 沃什提名 | ✅ |
+
+**触发：P0全部 + P1全部 + P2 + P3**
+
+**预测**：白银 20%+，黄金 8%+
+
+**实际**：白银 **-17.8%**，黄金 **-8.26%** ✅
 
 ---
 
