数据验证修正
修正内容：
- COMEX白银库存：添加"截至2026年1月"时间标注
- CFTC指标：从"历史高位"改为"高位或急速减少"
- 新增CFTC实例：1/20周减6846合约，10天后暴跌
- 新手指南CFTC判断标准更完善

数据验证结果：
- 黄金1/30跌幅 -8.26% ✓
- 白银1/30跌幅 ~17% ✓
- FOMC/非农/CPI/三巫日/休市日期 全部正确 ✓

--- a/00-新手必看-数据查询指南.md
+++ b/00-新手必看-数据查询指南.md
@@ -32,7 +32,7 @@
 | 1.2-1.5亿 | 🔴 高危 | 减仓50% |
 | < 1.2亿 | 💀 极危 | 减仓80%或清仓 |
 
-**当前状态**：约1.12亿盎司（💀 极危）
+**当前状态**：约1.12亿盎司（截至2026年1月，💀 极危）
 
 ---
 
@@ -176,7 +176,10 @@
 |--------------|----------|------|
 | 正常范围 | ✅ 安全 | 继续持有 |
 | 历史高位 | 🔴 危险 | 获利盘多，容易踩踏 |
-| 大幅减少 | ⚠️ 注意 | 资金在撤退 |
+| **高位急速减少** | 🔴 **危险** | **资金正在撤退，暴跌前兆** |
+| 低位稳定 | ⚠️ 注意 | 观望，等待方向 |
+
+**实例**：2026年1月20日白银净多头周减6846合约，10天后暴跌17%
 
 **关键单词**：
 - Non-Commercial = 投机者（对冲基金等）
