--- a/01-操作指南-2026年交割日历.md
+++ b/01-操作指南-2026年交割日历.md
@@ -184,7 +184,7 @@
 
 | 指标 | 警戒线 | 当前状态 | 查询 |
 |------|--------|----------|------|
-| **COMEX白银库存** | < 1.5亿盎司 | ✅ **1.12亿（已触发）** | silverdata.io |
+| **COMEX白银库存** | < 1.5亿盎司 | ✅ **1.12亿（截至2026年1月，已触发）** | silverdata.io |
 | **交割窗口** | 第一通知日前3天~最后交易日 | 按下方日历 | 本文档 |
 
 **P0判断**：
@@ -200,7 +200,7 @@
 |------|--------|------------|------|
 | **逆价差** | 近月 > 远月 | 跌幅 +50% | tradingcharts.com |
 | **短期涨幅** | > 50%/月 | 跌幅 +30-50% | kitco.com |
-| **CFTC投机多头** | 净多头历史高位 | 跌幅 +20-30% | cftc.gov |
+| **CFTC投机多头** | 净多头高位或急速减少 | 跌幅 +20-30% | cftc.gov |
 
 **P1预期跌幅**：
 | P0+P1触发 | 白银预期跌幅 | 黄金预期跌幅 | 操作 |
@@ -259,7 +259,7 @@
 | P0 | 交割窗口 | 第一通知日 | ✅ |
 | P1 | 逆价差 | 出现 | ✅ |
 | P1 | 短期涨幅 | 64%/27天 | ✅ |
-| P1 | CFTC多头 | 历史高位 | ✅ |
+| P1 | CFTC多头 | 高位回落中（1/20周减6846合约） | ✅ |
 | P2 | FOMC | 1月28日 | ✅ |
 | P3 | 金银比 | ~46 | ✅ |
 | P3 | 宏观利空 | 沃什提名 | ✅ |
