--- a/08-理论验证-有效率统计.md
+++ b/08-理论验证-有效率统计.md
@@ -132,7 +132,7 @@
 |------|------|--------|------------|----------|
 | 3 | **逆价差** | 近月 > 远月 | 跌幅 +50% | tradingcharts.com |
 | 4 | **短期涨幅** | > 50%/月 | 跌幅 +30-50% | kitco.com |
-| 5 | **CFTC投机多头** | 净多头历史高位 | 跌幅 +20-30% | cftc.gov |
+| 5 | **CFTC投机多头** | 净多头高位或急速减少 | 跌幅 +20-30% | cftc.gov |
 
 **P1触发数量与预期跌幅**：
 | P0+P1触发数 | 白银预期跌幅 | 黄金预期跌幅 |
@@ -242,7 +242,7 @@
 | **P0** | 交割窗口 | 第一通知日 | ✅ |
 | **P1** | 逆价差 | 出现 | ✅ |
 | **P1** | 短期涨幅 > 50% | 64%/27天 | ✅ |
-| **P1** | CFTC投机多头 | 历史高位 | ✅ |
+| **P1** | CFTC投机多头 | 高位回落中（1/20周减6846合约） | ✅ |
 | **P2** | FOMC决议 | 1月28日 | ✅ |
 | **P2** | 假期/宕机 | 无 | ❌ |
 | **P3** | 金银比 | ~46（极低） | ✅ |
