--- a/08-理论验证-有效率统计.md
+++ b/08-理论验证-有效率统计.md
@@ -245,7 +245,7 @@
 | **P1** | CFTC投机多头 | 高位回落中（1/20周减6846合约） | ✅ |
 | **P2** | FOMC决议 | 1月28日 | ✅ |
 | **P2** | 假期/宕机 | 无 | ❌ |
-| **P3** | 金银比 | ~46（极低） | ✅ |
+| **P3** | 金银比 | 历史极低（<50，正常80-90） | ✅ |
 | **P3** | 宏观利空 | 沃什提名 | ✅ |
 
 ### 分析结论
