添加术语表，方便新手理解
更新文档：
- README.md：添加完整术语表（9个英文缩写+中文解释）
- 09-2026投资策略速查.md：添加术语速查
- 00-新手必看-数据查询指南.md：添加术语解释+对金银影响

术语包括：
- COMEX（纽约商品交易所）
- FOMC（美联储议息会议）
- CPI（消费者物价指数/通胀数据）
- 非农/NFP（非农就业数据）
- CFTC（美国商品期货交易委员会）
- 三巫日（期权到期日）
- ETF（交易所交易基金）
- 逆价差（期货倒挂）
- FedWatch（利率预测工具）

--- a/00-新手必看-数据查询指南.md
+++ b/00-新手必看-数据查询指南.md
@@ -4,6 +4,22 @@
 
 ---
 
+## 先看这里：术语解释
+
+| 你看到的 | 是什么意思 | 对金银的影响 |
+|----------|------------|--------------|
+| **COMEX** | 纽约商品交易所 | 库存紧张=金银要跌 |
+| **FOMC** | 美联储议息会议 | 加息=金银跌，降息=金银涨 |
+| **CPI** | 通胀数据（物价指数） | 通胀高=可能加息=金银跌 |
+| **非农** | 美国就业数据 | 就业好=可能加息=金银跌 |
+| **CFTC** | 期货持仓报告 | 看大资金动向 |
+| **三巫日** | 期权到期日（季度第三周五） | 当天波动特别大 |
+| **ETF** | 交易所基金（GLD=黄金，SLV=白银） | 持仓减少=资金撤退 |
+| **逆价差** | 近月价格>远月价格 | 供应紧张，危险信号 |
+| **FedWatch** | 利率预测工具 | 看市场预期加息还是降息 |
+
+---
+
 ## 一、最重要的3个数据（必查）
 
 | 数据 | 重要性 | 查询频率 |
