--- a/09-2026投资策略速查.md
+++ b/09-2026投资策略速查.md
@@ -4,6 +4,20 @@
 
 ---
 
+## 术语速查
+
+| 缩写 | 中文 | 一句话解释 |
+|------|------|------------|
+| COMEX | 纽约商品交易所 | 全球最大金银期货市场 |
+| FOMC | 美联储议息会议 | 决定利率，鹰派=金银跌 |
+| CPI | 通胀数据 | 高通胀=可能加息=金银跌 |
+| 非农 | 就业数据 | 就业强=可能加息=金银跌 |
+| CFTC | 持仓报告 | 看大资金是做多还是做空 |
+| 三巫日 | 期权到期日 | 季度第三周五，波动大 |
+| 逆价差 | 期货倒挂 | 近月>远月=供应紧张 |
+
+---
+
 ## 一、场景速查表（出现情况→立刻行动）
 
 ### 🔴 必须减仓的情况
