新增获利策略（不只是避险）
README新增：
- 💰 获利操作（什么时候买）
- 建仓/加仓时机（5种情况）
- 2026年加仓窗口（4月/7月/10月）
- 获利原则（分批买/等企稳/设止损/顺势加）
- 完整日历分为：避险期/获利期/观望期

09-投资策略速查新增：
- 获利加仓时机（5种情况）
- 获利原则

--- a/09-2026投资策略速查.md
+++ b/09-2026投资策略速查.md
@@ -52,6 +52,25 @@
 | FedWatch显示降息概率 > 70% | 可持有 | 政策利好 |
 | 暴跌后企稳 + 库存回升 | 可分批建仓 | 风险释放 |
 
+### 💰 获利加仓时机
+
+| 出现这个情况 | 操作 | 原因 |
+|--------------|------|------|
+| **交割期结束后1-2周** | 分批建仓（每次20%） | 恐慌释放，常有反弹 |
+| **暴跌>15%后连续3天不创新低** | 小仓试探（10-20%） | 超跌反弹机会 |
+| **FOMC鸽派（降息/暂停加息）** | 加仓20-30% | 政策利好 |
+| **库存连续3周回升** | 逐步加仓 | 供应压力缓解 |
+| **金银比>100** | 可布局白银 | 白银被低估 |
+
+### 获利原则
+
+```
+1. 分批买：不要一次满仓，分3-5次建仓
+2. 等企稳：暴跌后至少等3天不再创新低
+3. 设止损：买入后设5-10%止损线
+4. 顺势加：涨了再加，亏了不摊平
+```
+
 ---
 
 ## 二、2026年关键时间节点
