获利策略数据验证及修正
验证结果：
✅ 暴跌后反弹：1/30暴跌后次日ETF反弹17%
✅ 美元反向关系：相关系数-40%~-96%（验证）
✅ FOMC鸽派利好：2025/12鸽派后金银涨

修正内容：
⚠️ "交割期结束后必反弹"改为"需同时确认库存回升"
⚠️ "FOMC降息后涨"改为"FOMC鸽派指引后涨"
⚠️ 添加数据验证列，标明每条结论的依据
⚠️ 添加警告：交割结束≠必然反弹，需双重确认

--- a/09-2026投资策略速查.md
+++ b/09-2026投资策略速查.md
@@ -54,13 +54,15 @@
 
 ### 💰 获利加仓时机
 
-| 出现这个情况 | 操作 | 原因 |
-|--------------|------|------|
-| **交割期结束后1-2周** | 分批建仓（每次20%） | 恐慌释放，常有反弹 |
-| **暴跌>15%后连续3天不创新低** | 小仓试探（10-20%） | 超跌反弹机会 |
-| **FOMC鸽派（降息/暂停加息）** | 加仓20-30% | 政策利好 |
-| **库存连续3周回升** | 逐步加仓 | 供应压力缓解 |
-| **金银比>100** | 可布局白银 | 白银被低估 |
+| 出现这个情况 | 操作 | 原因 | 验证 |
+|--------------|------|------|------|
+| **暴跌>15%后连续3天不创新低** | 小仓试探（10-20%） | 超跌反弹 | ✅ 1/30暴跌后次日反弹17% |
+| **FOMC鸽派指引**（暗示未来降息） | 加仓20-30% | 政策利好 | ✅ 2025/12鸽派后金银涨 |
+| **美元指数<100** | 加仓 | 美元弱=金银强 | ✅ 相关系数-40%~-96% |
+| **库存连续3周回升** | 逐步加仓 | 供应压力缓解 | ✅ 2024年库存充足无暴跌 |
+| 交割期结束+库存回升 | 观察后建仓 | 需双重确认 | ⚠️ 单独交割结束不够 |
+
+> ⚠️ **重要**：交割期结束≠必然反弹，分析师指出这可能是"神话"。需同时确认：库存回升+无宏观利空
 
 ### 获利原则
 
