2026年指南重大更新：新增年度特殊风险提示
新增内容：
1. JPMorgan前量化主管警告：白银可能1年内跌50%
2. 美联储政策偏鹰：仅1-2次降息预期
3. 鲍威尔任期届满（5月）+ 沃什接任（鹰派）
4. 世界经济论坛：地缘经济对抗是2026年第一大风险
5. 中国春节（2月15-21日）季节性需求下降
6. 政府关门风险（1/30已部分关门）

新增功能：
1. 止损设置详细指南（-5%/-8%/-10%三档）
2. 心理管理：FOMO/恐慌抛售/摊平执念/回本心态
3. 踏空vs套牢详细对比（数学原理+真实案例）

结论：2026年整体偏空，建议仓位比往年降低20%

数据来源：JPMorgan、WEF、美联储、高盛、CNN

--- a/01-操作指南-2026年交割日历.md
+++ b/01-操作指南-2026年交割日历.md
@@ -5,6 +5,20 @@
 
 ---
 
+## ⚠️ 2026年特殊警告（必读）
+
+| 风险因素 | 详情 | 建议 |
+|----------|------|------|
+| **JPMorgan前量化主管警告** | 白银可能在1年内跌50% | 控制仓位 |
+| **美联储政策偏鹰** | 2026年预计仅1-2次降息 | 不宜追涨 |
+| **鲍威尔任期届满** | 2026年5月 | 政策不确定性 |
+| **沃什接任（鹰派）** | 被称为"inflation hawk" | 利空金银 |
+| **地缘经济对抗** | 世界经济论坛列为2026年第一大风险 | 避险需求 |
+
+**结论**：2026年整体偏空，建议仓位比往年**降低20%**
+
+---
+
 ## 一、核心保命原则
 
 ### 纸黄金的特点
