--- a/09-2026投资策略速查.md
+++ b/09-2026投资策略速查.md
@@ -18,6 +18,36 @@
 
 ---
 
+## 〇、2026年特殊风险（新增）
+
+### ⚠️ 专业机构警告
+
+| 机构 | 观点 | 时间 |
+|------|------|------|
+| **JPMorgan前量化主管** | 白银可能在**1年内跌50%** | 2026/01 |
+| **世界经济论坛** | 地缘经济对抗是2026年**第一大风险** | 2026/01 |
+| **美联储** | 2026年预计**仅1次降息** | 2025/12 |
+
+### ⚠️ 2026年特有风险
+
+| 事件 | 时间 | 影响 |
+|------|------|------|
+| **鲍威尔任期届满** | 2026年5月 | 政策不确定性↑ |
+| **沃什接任（鹰派）** | 2026年5月后 | 可能偏向加息 |
+| **政府关门风险** | 全年 | 1/30已部分关门 |
+| **中国春节** | 2月15-21日 | 需求季节性下降 |
+
+### 📌 结论
+
+2026年整体偏**空头环境**：
+- 利率高位持续（仅1-2次降息）
+- 美联储主席更鹰派
+- 地缘风险高但不确定
+
+**建议**：整体仓位比往年**再降低20%**
+
+---
+
 ## 一、场景速查表（出现情况→立刻行动）
 
 ### 🔴 必须减仓的情况
@@ -170,6 +200,33 @@
 | **加仓要慢** | 确认安全后分批加，不要急 |
 | **留有余地** | 永远不要100%满仓或100%空仓 |
 
+### 止损设置（重要！）
+
+| 情况 | 止损线 | 示例 |
+|------|--------|------|
+| 正常持仓 | 买入价-10% | 买入$100，跌到$90止损 |
+| 高危期持仓 | 买入价-5% | 更严格，减少损失 |
+| 抄底试探 | 买入价-8% | 试探仓不留太多空间 |
+
+**止损原则**：
+```
+1. 买入时就设好止损，不要事后补
+2. 止损触发就执行，不要犹豫
+3. 止损后不立刻反手，等2-3天
+4. 止损是为了活下来，不是认输
+```
+
+### 心理管理
+
+| 心理陷阱 | 症状 | 对策 |
+|----------|------|------|
+| **FOMO（错失恐惧）** | "涨了我没买，好后悔" | 永远有下次机会 |
+| **恐慌抛售** | "跌了赶紧卖" | 看是否触发P0信号 |
+| **摊平执念** | "跌了加仓拉低成本" | 顺势不摊平 |
+| **回本心态** | "等回本再卖" | 止损不等人 |
+
+**一句话**：**情绪是敌人，纪律是朋友**
+
 ---
 
 ## 五、每周/每月检查清单
@@ -214,17 +271,60 @@
 
 ---
 
-## 七、一句话总结
+## 七、踏空 vs 套牢：怎么选？
+
+### 数据说话
+
+| 情景 | 概率 | 后果 | 恢复难度 |
+|------|------|------|----------|
+| **踏空**（错过上涨） | 高 | 少赚钱 | 随时可再买 |
+| **套牢**（被套住） | 低但致命 | 亏损50%+ | 需涨100%才回本 |
+
+### 数学原理
+
+```
+亏损50% → 需要涨100%才回本
+亏损30% → 需要涨43%才回本
+亏损20% → 需要涨25%才回本
+亏损10% → 需要涨11%才回本
+
+结论：越早止损，恢复越容易
+```
+
+### 真实案例
+
+| 策略 | 2026/1/30表现 | 结果 |
+|------|---------------|------|
+| 频繁操作（1/27减仓） | 躲过-17%暴跌 | ✅ 保住本金 |
+| 长期持有（不动） | 吃满-17%跌幅 | ❌ 需涨21%回本 |
+
+### 结论
+
+| 适合长期持有的人 | 适合频繁操作的人 |
+|------------------|------------------|
+| 不看盘的 | 能每周检查的 |
+| 承受得起50%回撤的 | 纪律性强的 |
+| 投资期限>5年的 | 想控制风险的 |
+
+> **本指南适合**：想控制风险、能遵守纪律的投资者
+> 
+> **不适合**：完全不想管的"佛系"投资者
+
+---
+
+## 八、一句话总结
 
 > **库存紧+交割期 = 必跌，提前跑**
 > 
 > **不确定时减仓，确定安全时加仓**
 > 
 > **宁可错过，不可做错**
+> 
+> **套牢比踏空可怕100倍**
 
 ---
 
-## 八、紧急联系方式
+## 九、紧急联系方式
 
 遇到问题时查询：
 - 库存：silverdata.io
