新增：1月30日被套者应对指南
针对没减仓被套住的投资者，提供三种选择：

选择A - 立刻止损（风险厌恶者）
- 卖出50-70%，锁定亏损
- 数学原理：亏27%需涨37%回本，越早止损越好

选择B - 减仓+等待（推荐大多数人）
- 今天减仓30-50%
- 设止损：再跌10%清仓
- 观察企稳信号后再补仓

选择C - 死扛等反弹（高风险）
- 仅适合仓位极小(<5%)且不急用钱者
- 3月10日前必须评估

分析师观点（已验证）：
- 花旗：看$150（3个月）
- Trading Economics：季末$105
- JPMorgan前主管：警告可能跌50%

关键时间表：
- 今天（1/31）：决定选择
- 2月中旬：如未反弹再减20%
- 3月10日前：无论如何减至20%仓位

--- a/09-2026投资策略速查.md
+++ b/09-2026投资策略速查.md
@@ -133,7 +133,115 @@
 
 ---
 
-## 三、突发情况应对
+## 三、1月30日被套了怎么办？（新增）
+
+> **适用人群**：在1月30日暴跌时没减仓，目前被套住的投资者
+
+### 当前状况评估（2026年1月31日）
+
+| 指标 | 数值 | 说明 |
+|------|------|------|
+| 白银暴跌 | -27%（$120→$85） | 史上最大单日跌幅之一 |
+| 黄金暴跌 | -8%（$5,520→$5,064） | 较大回调 |
+| 库存 | 1.12亿盎司 | ⚠️ 仍在警戒线下 |
+| 下一危险期 | 3月17-20日 | 还有45天 |
+
+### 分析师观点（已验证）
+
+| 机构 | 观点 | 目标价 |
+|------|------|--------|
+| **花旗银行** | 看好反弹 | $150（3个月内） |
+| **Trading Economics** | 短期反弹 | 季末$105，12个月$115 |
+| **DSP资管** | 白银仍看好 | 中期$64（当前已超） |
+| **JPMorgan前主管** | ⚠️ 警告 | 可能跌50% |
+
+### 🚨 被套者的三种选择
+
+#### 选择A：立刻止损（推荐给风险厌恶者）
+
+```
+适合人群：
+- 仓位>总资产15%
+- 无法承受再跌20%
+- 近期需要用钱
+
+操作：
+1. 立刻卖出50-70%
+2. 锁定亏损，保住剩余资金
+3. 等3月危险期过后再考虑
+
+数学原理：
+- 现在亏27%，需涨37%才回本
+- 如果再跌20%（到$68），需涨76%才回本
+- 越早止损，恢复越容易
+```
+
+#### 选择B：减仓+等待（推荐给大多数人）
+
+```
+适合人群：
+- 仓位<总资产10%
+- 能承受继续下跌
+- 不急用钱
+
+操作：
+1. 今天减仓30-50%（锁定部分损失）
+2. 保留30-50%等反弹
+3. 设置止损线：如果再跌10%（到$77），清仓
+
+反弹时机观察：
+- 连续3天不创新低 ✓
+- 库存开始回升 ✓
+- 美元指数走弱 ✓
+满足2个以上再考虑补仓
+```
+
+#### 选择C：死扛等反弹（高风险）
+
+```
+适合人群：
+- 仓位极小（<总资产5%）
+- 完全不急用钱
+- 投资期限>2年
+
+风险警告：
+⚠️ 花旗看$150 vs JPMorgan警告跌50%
+⚠️ 3月还有交割+FOMC+三巫日三重风险
+⚠️ 库存仍在警戒线下，随时可能再跌
+
+操作：
+1. 不加仓不摊平
+2. 设置心理止损线（比如再跌20%就认亏）
+3. 3月10日前必须评估是否减仓
+```
+
+### 具体操作时间表
+
+| 时间 | 操作 | 理由 |
+|------|------|------|
+| **今天（1/31）** | 评估仓位，决定选择A/B/C | 不要拖延 |
+| **下周** | 观察是否企稳（连续3天不创新低） | 判断方向 |
+| **2月中旬** | 如未反弹，再减仓20% | 为3月做准备 |
+| **3月10日前** | 无论如何减仓至20%以下 | 💀 极高危来临 |
+
+### ⚠️ 绝对不要做的事
+
+| 行为 | 为什么不能做 |
+|------|--------------|
+| ❌ 加仓摊平成本 | 越摊越深，可能全亏 |
+| ❌ 借钱补仓 | 杠杆会放大亏损 |
+| ❌ 完全不管等自动回本 | 3月还有大风险 |
+| ❌ 频繁买卖做T | 手续费+滑点吃掉利润 |
+
+### 一句话总结
+
+> **被套不可怕，可怕的是不止损还加仓**
+> 
+> **减仓是为了活下来，活着才有机会**
+
+---
+
+## 四、突发情况应对
 
 ### 白银单日暴跌 > 10%
 
@@ -180,7 +288,7 @@
 
 ---
 
-## 四、仓位管理铁律
+## 五、仓位管理铁律
 
 ### 最大仓位限制
 
@@ -229,7 +337,7 @@
 
 ---
 
-## 五、每周/每月检查清单
+## 六、每周/每月检查清单
 
 ### 每周三（5分钟）
 
@@ -252,7 +360,7 @@
 
 ---
 
-## 六、2026年操作日历（一页纸）
+## 七、2026年操作日历（一页纸）
 
 | 月份 | 风险等级 | 关键日期 | 操作建议 |
 |------|----------|----------|----------|
@@ -271,7 +379,7 @@
 
 ---
 
-## 七、踏空 vs 套牢：怎么选？
+## 八、踏空 vs 套牢：怎么选？
 
 ### 数据说话
 
@@ -312,7 +420,7 @@
 
 ---
 
-## 八、一句话总结
+## 九、一句话总结
 
 > **库存紧+交割期 = 必跌，提前跑**
 > 
@@ -324,7 +432,7 @@
 
 ---
 
-## 九、紧急联系方式
+## 十、紧急联系方式
 
 遇到问题时查询：
 - 库存：silverdata.io
