修正：1月31日是周六（休市日）
将操作时间表修正为：
- 周末（1/31-2/1）：冷静评估，决定策略
- 周一开盘（2/2）：执行减仓
- 2月第一周：观察是否企稳

感谢用户指正

--- a/09-2026投资策略速查.md
+++ b/09-2026投资策略速查.md
@@ -219,8 +219,9 @@
 
 | 时间 | 操作 | 理由 |
 |------|------|------|
-| **今天（1/31）** | 评估仓位，决定选择A/B/C | 不要拖延 |
-| **下周** | 观察是否企稳（连续3天不创新低） | 判断方向 |
+| **周末（1/31-2/1）** | 冷静评估，决定选择A/B/C | 利用休市时间思考 |
+| **周一开盘（2/2）** | 执行减仓决定 | 不要拖延 |
+| **2月第一周** | 观察是否企稳（连续3天不创新低） | 判断方向 |
 | **2月中旬** | 如未反弹，再减仓20% | 为3月做准备 |
 | **3月10日前** | 无论如何减仓至20%以下 | 💀 极高危来临 |
 
