新增：长期持有策略指南
历史数据：
- 黄金10年CAGR 12.16%，25年CAGR 11.91%
- 研究表明长期持有通常跑赢择时策略

长期持有建议：
1. 仓位控制5-10%
2. 黄金70%+白银30%
3. 定投不择时
4. 心理准备接受-50%回撤
5. 时间期限5-10年以上

风险警告：
- 2011-2015黄金跌45%
- 白银曾跌72%（$50→$14）
- 可能10年不涨

结论：长期持有能赚钱，但需要"坐得住"

数据来源：Statista、Investopedia、APMEX

--- a/09-2026投资策略速查.md
+++ b/09-2026投资策略速查.md
@@ -380,7 +380,83 @@
 
 ---
 
-## 八、踏空 vs 套牢：怎么选？
+## 八、长期持有策略（不择时）
+
+> **适合人群**：不想频繁操作、相信长期趋势、能承受大回撤
+
+### 历史数据支撑
+
+| 资产 | 10年CAGR | 25年CAGR | 说明 |
+|------|----------|----------|------|
+| **黄金** | 12.16% | 11.91% | 2015年$1,057→2025年$3,330 |
+| **白银** | ~10-15% | 波动更大 | 牛市涨幅更高，熊市跌幅更深 |
+| 标普500 | ~10% | ~10% | 对比参考 |
+
+### 研究结论
+
+| 策略 | 结论 | 来源 |
+|------|------|------|
+| 择时 vs 长期持有 | **长期持有通常跑赢择时** | Investopedia研究 |
+| 季节性择时 | 月内波动太大，无法可靠获利 | APMEX分析 |
+| 错过最佳交易日 | 错过10个最佳上涨日，收益减半 | 多项研究 |
+
+### 长期持有的优势
+
+| 优势 | 说明 |
+|------|------|
+| ✅ 不需要盯盘 | 省心省力 |
+| ✅ 避免情绪操作 | 不会追涨杀跌 |
+| ✅ 交易成本低 | 少买卖=少手续费 |
+| ✅ 不会踏空 | 一直在车上 |
+
+### 长期持有的风险
+
+| 风险 | 历史案例 |
+|------|----------|
+| ❌ 极端回撤 | 2011-2015年黄金从$1,900跌到$1,050（-45%） |
+| ❌ 白银波动更大 | 2011年$50跌到2015年$14（-72%） |
+| ❌ 可能10年不涨 | 2011-2020黄金实际收益为负 |
+
+### 如果选择长期持有
+
+```
+1. 仓位控制：总资产的5-10%（不超过15%）
+2. 分散配置：黄金70% + 白银30%（白银波动更大）
+3. 定投策略：每月固定金额买入，不择时
+4. 心理准备：能接受-50%的回撤而不卖出
+5. 时间期限：至少5年，最好10年以上
+```
+
+### 长期持有 vs 本指南策略
+
+| 对比项 | 长期持有 | 本指南（择时） |
+|--------|----------|----------------|
+| 操作频率 | 几乎不操作 | 每月检查，危险期减仓 |
+| 最大回撤 | 可能-50%以上 | 目标控制在-20%以内 |
+| 踏空风险 | 无 | 有（错过快速上涨） |
+| 适合人群 | 佛系、能忍 | 纪律性强、愿意学习 |
+| 历史表现 | 10年+12%/年 | 取决于执行力 |
+
+### 长期持有者的底线建议
+
+即使选择长期持有，也建议：
+
+| 情况 | 建议 | 原因 |
+|------|------|------|
+| 单日跌幅>25% | 不要恐慌卖出 | 往往是最低点 |
+| 账户亏损>50% | 评估是否止损 | 需涨100%才回本 |
+| 需要用钱时 | 分批卖出 | 不要一次性清仓 |
+| 遇到"世纪级"利空 | 减仓30-50% | 如战争、货币危机 |
+
+### 一句话总结
+
+> **长期持有能赚钱，但需要"坐得住"**
+> 
+> **如果-50%回撤会让你睡不着觉，还是用本指南做风控**
+
+---
+
+## 九、踏空 vs 套牢：怎么选？
 
 ### 数据说话
 
@@ -421,7 +497,7 @@
 
 ---
 
-## 九、一句话总结
+## 十、一句话总结
 
 > **库存紧+交割期 = 必跌，提前跑**
 > 
@@ -433,7 +509,7 @@
 
 ---
 
-## 十、紧急联系方式
+## 十一、紧急联系方式
 
 遇到问题时查询：
 - 库存：silverdata.io
